SliderExtender handle image align fixed (CodePlex item 27857)

--- a/AjaxControlToolkit/Styles/Slider.css
+++ b/AjaxControlToolkit/Styles/Slider.css
@@ -23,3 +23,7 @@
     height: 10px;
     width: 22px;
 }
+
+.ajax__slider_v_handle img {
+    display: block;
+}
